@@ -9,6 +9,7 @@ and designed to be compatible with ipMIDI for Windows (http://nerds.de).
 Website:
 
   http://qmidinet.sourceforge.net
+  https://qmidinet.sourceforge.io
 
 Project page:
 
